--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "challenge-integrador",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "keywords": [],
+"keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "method-override": "^3.0.0"
+    "express": "^4.18.2"    
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
- }
+}
+
