--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "challenge-integrador",
+  "name": "proyecto-integrador",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start":"node app.js",
+    "dev":"nodemon app.json"
+   
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "method-override": "^3.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "jake": "^10.8.7",
     "nodemon": "^3.0.1"
   }
 }
