--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs-lint": "^2.0.0",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5"
   },
   "devDependencies": {
